tests/specs/checks/snapshots/specs__checks_agents__snapshot_forbidden_table_text.snap
---
source: crates/cli/../../tests/specs/checks/agents.rs
expression: result.stdout()
---
agents: FAIL
  CLAUDE.md: missing required section
    Add a "## Directory Structure" section: Overview of project layout and key directories
  CLAUDE.md: missing required section
    Add a "## Landing the Plane" section: Checklist for AI agents before completing work
  CLAUDE.md:7: forbidden table
    Tables are not token-efficient. Convert to a list or prose.
FAIL: agents
