tests/specs/checks/snapshots/specs__checks_agents__snapshot_missing_file_text.snap
---
source: crates/cli/../../tests/specs/checks/agents.rs
expression: result.stdout()
---
agents: FAIL
  CLAUDE.md: missing required file
    Required agent file 'CLAUDE.md' not found at project root
FAIL: agents
