tests/specs/checks/snapshots/specs__checks_agents__snapshot_missing_section_text.snap
---
source: crates/cli/../../tests/specs/checks/agents.rs
expression: result.stdout()
---
agents: FAIL
  CLAUDE.md: missing required section
    Add a "## Landing the Plane" section: Checklist for AI agents before finishing work
FAIL: agents
