tests/specs/checks/snapshots/specs__checks_agents__snapshot_out_of_sync_text.snap
---
source: crates/cli/../../tests/specs/checks/agents.rs
expression: result.stdout()
---
agents: FAIL
  .cursorrules: out of sync with CLAUDE.md
    Code Style differs. Use --fix to sync from CLAUDE.md, or reconcile manually.
  CLAUDE.md: missing required section
    Add a "## Directory Structure" section: Overview of project layout and key directories
  CLAUDE.md: missing required section
    Add a "## Landing the Plane" section: Checklist for AI agents before completing work
  .cursorrules: missing required section
    Add a "## Directory Structure" section: Overview of project layout and key directories
  .cursorrules: missing required section
    Add a "## Landing the Plane" section: Checklist for AI agents before completing work
FAIL: agents
